GST Input report in progress

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -4,13 +4,12 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-  <add name="Prints.Properties.Settings.ConnectionString2" connectionString="Provider=VFPOLEDB.1;Data Source=D:\ACCOUNTS-KSB\KSB"
-   providerName="System.Data.OleDb" />
- </connectionStrings>
- <appSettings>
+		<add name="Prints.Properties.Settings.ConnectionString2" connectionString="Provider=VFPOLEDB.1;Data Source=D:\ACCOUNTS-KSB\KSB" providerName="System.Data.OleDb" />
+	</connectionStrings>
+	<appSettings>
 		<add key="DataPath" value="D:\ACCOUNTS\" />
 	</appSettings>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
 	</startup>
 </configuration>
