Completed GST input level 1

--- a/Prints/Prints.csproj
+++ b/Prints/Prints.csproj
@@ -110,6 +110,7 @@
       <DependentUpon>ReportForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\GstInput.datasource" />
     <None Include="Properties\DataSources\PrintListItem.datasource" />
     <None Include="Properties\DataSources\SalesLineItem.datasource" />
     <None Include="Properties\Settings.settings">
