Tag printing is in progress

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -8,6 +8,7 @@
 	</connectionStrings>
 	<appSettings>
 		<add key="DataPath" value="D:\ACCOUNTS\" />
+		<add key="PriceCode" value="SUPERGOLDZ" />
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
