--- a/Prints/Prints.csproj
+++ b/Prints/Prints.csproj
@@ -108,7 +108,7 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProductTag.rdlc" />
+    <EmbeddedResource Include="TagPrinting.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -127,7 +127,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\GstInput.datasource" />
-    <None Include="Properties\DataSources\Prints.Models.ProductTag.datasource" />
+    <None Include="Properties\DataSources\ProductTag.datasource" />
     <None Include="Properties\DataSources\SalesLineItem.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
