--- a/Prints/Prints.csproj
+++ b/Prints/Prints.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
+    <!-- <IsWebBootstrapper>false</IsWebBootstrapper> -->
+    <!-- <PublishUrl>D:\Development\Projects\dotnet\Prints\Publish\</PublishUrl> -->
+    <!-- <Install>true</Install> -->
+    <!-- <InstallFrom>Disk</InstallFrom> -->
+    <!-- <UpdateEnabled>false</UpdateEnabled> -->
+    <!-- <UpdateMode>Foreground</UpdateMode> -->
+    <!-- <UpdateInterval>7</UpdateInterval> -->
+    <!-- <UpdateIntervalUnits>Days</UpdateIntervalUnits> -->
+    <!-- <UpdateRequired>false</UpdateRequired> -->
+    <!-- <MapFileExtensions>true</MapFileExtensions> -->
+    <!-- <ApplicationRevision>1</ApplicationRevision> -->
+    <!-- <ApplicationVersion>1.0.0.%2a</ApplicationVersion> -->
+    <!-- <UseApplicationTrust>false</UseApplicationTrust> -->
+    <!-- <PublishWizardCompleted>true</PublishWizardCompleted> -->
+    <!-- <BootstrapperEnabled>true</BootstrapperEnabled> -->
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -35,6 +50,17 @@
   <PropertyGroup>
     <ApplicationIcon>Print.ico</ApplicationIcon>
   </PropertyGroup>
+  <!-- <PropertyGroup> -->
+    <!-- <ManifestCertificateThumbprint>0993D1310D4F18DFE6406481170AE9024AF761FE</ManifestCertificateThumbprint> -->
+  <!-- <PropertyGroup> -->
+    <!-- <ManifestKeyFile>Prints_TemporaryKey.pfx</ManifestKeyFile> -->
+  <!-- </PropertyGroup> -->
+  <!-- <PropertyGroup> -->
+    <!-- <GenerateManifests>true</GenerateManifests> -->
+  <!-- </PropertyGroup> -->
+  <!-- <PropertyGroup> -->
+    <!-- <SignManifests>true</SignManifests> -->
+  <!-- </PropertyGroup> -->
   <ItemGroup>
     <Reference Include="AxShockwaveFlashObjects, Version=1.0.0.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
@@ -75,9 +101,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Zen.Barcode.Core, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b5ae55aa76d2d9de, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zen.Barcode.Rendering.Framework.3.1.10729.1\lib\Zen.Barcode.Core.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrystalReportsForm.cs">
@@ -97,7 +120,6 @@
     </Compile>
     <Compile Include="Models\Party.cs" />
     <Compile Include="Models\ProductTag.cs" />
-    <Compile Include="PrintBarcode.cs" />
     <Compile Include="Models\PrintHeader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -151,6 +173,7 @@
       <DependentUpon>TagPrintingForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <!-- <None Include="Prints_TemporaryKey.pfx" /> -->
     <None Include="Properties\DataSources\GstInput.datasource" />
     <None Include="Properties\DataSources\ProductTag.datasource" />
     <None Include="Properties\DataSources\SalesLineItem.datasource" />
@@ -176,5 +199,12 @@
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
+  <!-- <ItemGroup> -->
+    <!-- <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1"> -->
+      <!-- <Visible>False</Visible> -->
+      <!-- <ProductName>.NET Framework 3.5 SP1</ProductName> -->
+      <!-- <Install>false</Install> -->
+    <!-- </BootstrapperPackage> -->
+  <!-- </ItemGroup> -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
