--- a/Prints/App.config
+++ b/Prints/App.config
@@ -9,6 +9,7 @@
 	<appSettings>
 		<add key="DataPath" value="D:\ACCOUNTS\" />
 		<add key="PriceCode" value="SUPERGOLDZ" />
+		<add key="InvoiceRDLC" value="Invoice2" />
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
