Tag Printing: KB Silks

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -10,6 +10,7 @@
 		<add key="DataPath" value="D:\ACCOUNTS\" />
 		<add key="PriceCode" value="SUPERGOLDZ" />
 		<add key="InvoiceRDLC" value="Invoice2" />
+		<add key="TagRPT" value="TagKbSilks" />
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
