Tag printing release

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -8,9 +8,9 @@
 	</connectionStrings>
 	<appSettings>
 		<add key="DataPath" value="D:\ACCOUNTS\" />
-		<add key="PriceCode" value="SUPERGOLDZ" />
-		<add key="InvoiceRDLC" value="Invoice2" />
-		<add key="TagRPT" value="TagKbSilks" />
+		<add key="PriceCode" value="ABCDEFGHIJ" />
+		<add key="InvoiceRDLC" value="Invoice" />
+		<add key="TagRPT" value="TagPrinting2" />
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
