--- a/Prints/App.config
+++ b/Prints/App.config
@@ -9,7 +9,7 @@
 	<appSettings>
 		<add key="DataPath" value="D:\ACCOUNTS\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
-		<add key="InvoiceRDLC" value="Invoice" />
+		<add key="InvoiceRDLC" value="InvoiceKBS" />
 		<add key="TagRPT" value="TagPrinting2" />
 	</appSettings>
 	<startup>
