--- a/Prints/Prints.csproj
+++ b/Prints/Prints.csproj
@@ -115,6 +115,12 @@
       <DependentUpon>InvoiceRagu.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="InvoiceRagu.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InvoiceRagu.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Models\AccountingYear.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\GstInput.cs" />
@@ -124,9 +130,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Invoice.cs" />
     <Compile Include="Models\Party.cs" />
     <Compile Include="Models\ProductTag.cs" />
     <Compile Include="Models\PrintHeader.cs" />
+    <Compile Include="PrintHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportForm.cs">
