Tagprinting for KBS is in completed

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -10,7 +10,7 @@
 		<add key="DataPath" value="D:\ACCOUNTS\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
 		<add key="InvoiceRDLC" value="InvoiceRagu" />
-		<add key="TagRPT" value="TagPrinting2" />
+		<add key="TagRPT" value="tagkbs" />
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
