Debit note is in progress

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -7,9 +7,9 @@
 		<add name="Prints.Properties.Settings.ConnectionString2" connectionString="Provider=VFPOLEDB.1;Data Source=D:\ACCOUNTS-KSB\KSB" providerName="System.Data.OleDb" />
 	</connectionStrings>
 	<appSettings>
-		<add key="DataPath" value="D:\ACCOUNTS\" />
+		<add key="DataPath" value="D:\ACCT-GST\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
-		<add key="InvoiceRDLC" value="InvoiceRagu" />
+		<add key="InvoiceRDLC" value="Invoice" />
 		<add key="TagRPT" value="TagKBS" />
 	</appSettings>
 	<startup>
