--- a/Prints/App.config
+++ b/Prints/App.config
@@ -9,10 +9,12 @@
 	<appSettings>
 		<add key="DataPath" value="D:\ACCOUNTS\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
-		<add key="InvoiceRDLC" value="InvoiceRagu" />
-		<add key="TagRPT" value="TagKBS" />
+		<!--InvoiceReport=MS;CR-->
+		<add key="InvoiceForm" value="CR" />
+		<add key="InvoiceReport" value="InvoiceRagu" />
+		<add key="TagReport" value="TagKBS" />
 	</appSettings>
-	<startup>
+	<!--<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-	</startup>
+	</startup>-->
 </configuration>
