--- a/Prints/App.config
+++ b/Prints/App.config
@@ -9,10 +9,10 @@
 	<appSettings>
 		<add key="DataPath" value="D:\ACCT-GST\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
-		<!--InvoiceReport=MS;CR-->
-		<add key="InvoiceForm" value="CR" />
-		<add key="InvoiceReport" value="InvoiceRagu" />
-		<add key="TagReport" value="TagKBS" />
+		<!--InvoiceForm=CR|MS-->
+		<add key="InvoiceForm" value="MS" />
+		<add key="InvoiceReport" value="Invoice2" />
+		<add key="TagReport" value="TagPrinting2" />
 	</appSettings>
 	<!--<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
