--- a/Prints/App.config
+++ b/Prints/App.config
@@ -7,12 +7,12 @@
 		<add name="Prints.Properties.Settings.ConnectionString2" connectionString="Provider=VFPOLEDB.1;Data Source=D:\ACCOUNTS-KSB\KSB" providerName="System.Data.OleDb" />
 	</connectionStrings>
 	<appSettings>
-		<add key="DataPath" value="D:\ACCT-GST\" />
+		<add key="DataPath" value="D:\OMVMA\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
 		<!--InvoiceForm=CR|MS-->
 		<add key="InvoiceForm" value="MS" />
 		<add key="InvoiceReport" value="Invoice2" />
-		<add key="TagReport" value="TagPrinting2" />
+		<add key="TagReport" value="TagOmvma" />
 	</appSettings>
 	<!--<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
