--- a/Prints/Prints.csproj
+++ b/Prints/Prints.csproj
@@ -163,6 +163,12 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="TagOmvma.cs">
+      <DependentUpon>TagOmvma.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="TagPrinting2.cs">
       <DependentUpon>TagPrinting2.rpt</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -202,6 +208,10 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>TagKbSilks.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="TagOmvma.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>TagOmvma.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="TagPrinting2.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>TagPrinting2.cs</LastGenOutput>
@@ -232,9 +242,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <!-- <Compile Include="Properties\Settings.Designer.cs"> -->
-      <!-- <AutoGen>True</AutoGen> -->
-      <!-- <DependentUpon>Settings.settings</DependentUpon> -->
-      <!-- <DesignTimeSharedInput>True</DesignTimeSharedInput> -->
+    <!-- <AutoGen>True</AutoGen> -->
+    <!-- <DependentUpon>Settings.settings</DependentUpon> -->
+    <!-- <DesignTimeSharedInput>True</DesignTimeSharedInput> -->
     <!-- </Compile> -->
   </ItemGroup>
   <ItemGroup>
