Invoice number issue fixed

--- a/Prints/App.config
+++ b/Prints/App.config
@@ -4,15 +4,15 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-		<add name="Prints.Properties.Settings.ConnectionString2" connectionString="Provider=VFPOLEDB.1;Data Source=D:\ACCOUNTS-KSB\KSB" providerName="System.Data.OleDb" />
+		<add name="Prints.Properties.Settings.ConnectionString2" connectionString="Provider=VFPOLEDB.1;Data Source=D:\ACCOUNTS" providerName="System.Data.OleDb" />
 	</connectionStrings>
 	<appSettings>
-		<add key="DataPath" value="D:\OMVMA\" />
+		<add key="DataPath" value="D:\ACCT-GST\" />
 		<add key="PriceCode" value="ABCDEFGHIJ" />
 		<!--InvoiceForm=CR|MS-->
 		<add key="InvoiceForm" value="MS" />
-		<add key="InvoiceReport" value="Invoice2" />
-		<add key="TagReport" value="TagOmvma" />
+		<add key="InvoiceReport" value="Invoice" />
+		<add key="TagReport" value="TagPrinting2" />
 	</appSettings>
 	<!--<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
